2007-05-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders.

        Uncomment HTMLFramesSetElement constructor now that it exists.

        * page/DOMWindow.idl:

2007-05-24  Anders Carlsson  <andersca@apple.com>

        Try fixing the buildbot build.
        
        * loader/ImageDocument.cpp:
        (WebCore::ImageDocument::resizeImageToFit):
        (WebCore::ImageDocument::imageClicked):

2007-05-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=13853
        Autogenerate the JS bindings for the HTMLFrameSetElement

        * DerivedSources.make:
        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSHTMLElementWrapperFactory.cpp:
        * bindings/js/JSHTMLFrameSetCustom.cpp: Added.
        (WebCore::JSHTMLFrameSetElement::canGetItemsForName):
        (WebCore::JSHTMLFrameSetElement::nameGetter):
        * bindings/js/kjs_html.cpp:
        (KJS::):
        (KJS::JSHTMLElement::classInfo):
        (KJS::JSHTMLElement::accessors):
        (KJS::JSHTMLElement::getOwnPropertySlot):
        * bindings/js/kjs_html.h:
        (KJS::JSHTMLElement::):
        * html/HTMLFrameSetElement.idl:

2007-05-24  Zack Rusin  <zrusin@trolltech.com>

        Reviewed by andersca

        Fixing check for incorrent font size - it should
        check fixed not normal.

        * page/Settings.cpp:
        (WebCore::Settings::setDefaultFixedFontSize):

2007-05-24  Mitz Pettel  <mitz@webkit.org>

        Speculative buildbot build fix.

        * css/cssstyleselector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):

2007-05-24  Adam Roben  <aroben@apple.com>

        Made Chrome::addMessageToConsole more flexible

        addMessageToConsole now takes two additional parameters to specify the
        message source (HTML, JS, CSS, XML) and level (error, warning, log). To
        maintain our old behavior, all current messages were given